Fix: Update new dimension contains filter selector to properly align in both the dashboard filter builder and the report filter builder

--- a/packages/dashboards/app/styles/navi-dashboards/components/dashboard-filters.less
+++ b/packages/dashboards/app/styles/navi-dashboards/components/dashboard-filters.less
@@ -59,5 +59,11 @@
     .filter-collection;
 
     padding-left: 17px;
+
+    .filter-builder-dimension {
+      &__select-trigger {
+        margin: 0 3px;
+      }
+    }
   }
 }
